blade-bookinfo/base/gedemo/default/bookinfo-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: gloo-system
spec:
  displayName: bookinfo
  sslConfig:
    secretRef:
      name: bookinfo
      namespace: gloo-system
    sniDomains:
    - ${BOOKINFO_URL}
  virtualHost:
    domains:
    - ${BOOKINFO_URL}
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: bookinfo-productpage-9080
            namespace: gloo-system
